--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-feature android:name="android.hardware.bluetooth" android:required="true" />
-    <uses-feature android:name="android.hardware.bluetooth_le" android:required="false" />
+    <uses-feature android:name="android.hardware.bluetooth_le" android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -23,6 +23,7 @@
             android:name=".interfaces.auth.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -32,16 +33,21 @@
 
         <activity
             android:name=".interfaces.MainActivity"
-            android:theme="@style/AppTheme.NoActionBar">
+            android:theme="@style/AppTheme.NoActionBar"
+            android:launchMode="singleTop">
         </activity>
-        <activity android:name=".interfaces.beacontag.discovery.BeaconListActivity"
-            android:label="@string/register_a_tag">
+        <activity
+          android:name=".interfaces.beacontag.discovery.BeaconListActivity"
+          android:label="@string/register_a_tag">
         </activity>
-        <activity android:name=".interfaces.beacontag.discovery.ShowOneActivity"
-            android:label="Distance to">
+        <activity
+          android:name=".interfaces.beacontag.discovery.ShowOneActivity"
+          android:label="Distance to">
         </activity>
-        <activity android:name=".interfaces.beacontag.BeaconTagActivity"
-            android:label="@string/my_tags">
+        <activity
+          android:name=".interfaces.beacontag.BeaconTagActivity"
+          android:label="@string/my_tags"
+          android:launchMode="singleTop">
         </activity>
 
         <activity android:name="net.openid.appauth.RedirectUriReceiverActivity">
