--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,6 +7,7 @@ repositories {
 android {
     compileSdkVersion rootProject.compileSdkVersion
     buildToolsVersion rootProject.buildToolsVersion
+
     defaultConfig {
         applicationId "mars.ring"
         minSdkVersion rootProject.minSdkVersion
@@ -20,15 +21,27 @@ android {
                 'appAuthRedirectScheme': 'mars.ring'
         ]
     }
+    signingConfigs {
+        releaseSigning {
+            storeFile file ((releaseKeystore.size() > 0) ? releaseKeystore : 'NO_KEYSTORE')
+            storePassword ''
+            keyAlias releaseKeyAlias
+            keyPassword ''
+        }
+    }
     buildTypes {
         release {
-            minifyEnabled false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.releaseSigning
         }
     }
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
+    }
+    configurations.all {
+        resolutionStrategy.force 'com.google.code.findbugs:jsr305:1.3.9'
     }
 }
 
@@ -49,9 +62,8 @@ dependencies {
 
 
     testImplementation 'junit:junit:4.12'
-//    androidTestImplementation('com.android.support.test.espresso:espresso-core:2.2.2', {
-//        exclude group: 'com.android.support', module: 'support-annotations'
-//    })
+    androidTestImplementation 'com.android.support.test:runner:0.5'
+    androidTestImplementation 'com.android.support.test.espresso:espresso-core:2.2.2'
 }
 
 task run(dependsOn: 'installDebug') {
@@ -63,5 +75,17 @@ task run(dependsOn: 'installDebug') {
         proc.in.eachLine { line -> println line }
         proc.err.eachLine { line -> System.err.println('ERROR: ' + line) }
         proc.waitFor()
+    }
+}
+
+gradle.taskGraph.whenReady { taskGraph ->
+    if(taskGraph.hasTask(':app:assembleRelease')) {
+        // Only execute when we are trying to assemble a release build
+//        def pass = System.console().readPassword("\nPlease enter key passphrase: ")
+        // readPassword returns a char[] so we need to wrap it into a string
+        ant.input(message: 'Enter keystore password:', addproperty: 'userInputPassword', defaultValue : '')
+        def pass = ant.properties.userInputPassword
+        android.signingConfigs.releaseSigning.storePassword = new String(pass)
+        android.signingConfigs.releaseSigning.keyPassword = new String(pass)
     }
 }
