--- a/build.gradle
+++ b/build.gradle
@@ -1,5 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
+ext {
+    versionNum = 1
+    versionName = "1.0"
+    versionDate = "2017/12/27"
+    minSdkVersion = 18
+    compileSdkVersion = 26
+    buildToolsVersion = '26.0.2'
+    supportLibVersion = '26.1.0'
+}
+
 buildscript {
     repositories {
         jcenter()
@@ -7,7 +17,6 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
-        classpath 'com.github.dcendents:android-maven-gradle-plugin:1.5'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -21,14 +30,6 @@ allprojects {
     }
 }
 
-project.ext.minSdkVersion = 18
-project.ext.compileSdkVersion = 26
-project.ext.buildToolsVersion = '26.0.2'
-project.ext.supportLibVersion = '26.1.0'
-project.ext.versionNum = 1
-project.ext.versionName = "1.0"
-project.ext.versionDate = "2017/12/07"
-
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
@@ -39,4 +40,8 @@ task showVersion {
         logger.lifecycle("Version Name: " + project.versionName)
         logger.lifecycle("Version Date: " + project.versionDate)
     }
+}
+
+task wrapper(type: Wrapper) {
+    gradleVersion = '4.4'
 }
