Improving build for sigining a package. Note: Google App Signing feature is activated for this app, so GuploadKeystore.jks is a an Upload key, later Google will re-sign this app which is good if this local key get compromised.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,7 +23,7 @@ android {
     }
     signingConfigs {
         releaseSigning {
-            storeFile file ((releaseKeystore.size() > 0) ? releaseKeystore : 'NO_KEYSTORE')
+            storeFile file ('GuploadKeystore.jks')
             storePassword ''
             keyAlias releaseKeyAlias
             keyPassword ''
