--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,6 +20,10 @@
         android:theme="@style/AppTheme"
         android:name=".application.RingApp">
 
+        <meta-data
+          android:name="com.google.android.geo.API_KEY"
+          android:value="@string/google_maps_key" />
+
         <activity
             android:name=".interfaces.auth.LoginActivity"
             android:label="@string/app_name"
