--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,7 +53,8 @@ dependencies {
     implementation "com.android.support:design:${rootProject.supportLibVersion}"
     implementation "com.android.support:support-vector-drawable:${rootProject.supportLibVersion}"
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
-    implementation 'com.google.android.gms:play-services-maps:11.8.0'
+    implementation "com.google.android.gms:play-services-maps:${rootProject.playServicesVersion}"
+    implementation "com.google.android.gms:play-services-location:${rootProject.playServicesVersion}"
     implementation 'org.altbeacon:android-beacon-library:2.12.3'
     implementation 'net.openid:appauth:0.7.0'
     implementation 'com.squareup.okio:okio:1.13.0'
