--- a/build.gradle
+++ b/build.gradle
@@ -8,6 +8,7 @@ ext {
     compileSdkVersion = 26
     buildToolsVersion = '26.0.2'
     supportLibVersion = '26.1.0'
+    playServicesVersion = '11.8.0'
 }
 
 buildscript {
