--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,7 +29,7 @@
             android:name=".interfaces.auth.LoginActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop"
+            android:launchMode="singleInstance"
             android:windowSoftInputMode="stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -40,15 +40,17 @@
         <activity
             android:name=".interfaces.MainActivity"
             android:theme="@style/AppTheme.NoActionBar"
-            android:launchMode="singleTop">
+            android:launchMode="singleInstance">
         </activity>
         <activity
-          android:name=".interfaces.beacontag.discovery.BeaconListActivity"
-          android:label="@string/register_a_tag">
+          android:name=".interfaces.beacontag.discovery.BeaconRegistrationActivity"
+          android:label="@string/register_a_tag"
+          android:launchMode="singleTop">
         </activity>
         <activity
           android:name=".interfaces.beacontag.discovery.ShowOneActivity"
-          android:label="Distance to">
+          android:label="Distance to"
+          android:launchMode="singleTop">
         </activity>
         <activity
           android:name=".interfaces.beacontag.BeaconTagActivity"
