refs #11 Notify customer when a Tag found  - Customers can report lost eTags and also mark them as found(Manually)  as of this revision. Note: When eTag is seen by owner's phone then we can mark that eTag as found automatically.

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,14 +25,14 @@ android {
         releaseSigning {
             storeFile file ('GuploadKeystore.jks')
             storePassword ''
-            keyAlias releaseKeyAlias
+            keyAlias 'androidKeystore'
             keyPassword ''
         }
     }
     buildTypes {
         release {
-            minifyEnabled true
             debuggable false
+            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.releaseSigning
         }
