--- a/app/src/main/res/raw/auth_config.json
+++ b/app/src/main/res/raw/auth_config.json
@@ -3,8 +3,8 @@
   "redirect_uri": "mars.ring:/oauth2redirect",
   "authorization_scope": "openid email profile",
   "discovery_uri": "",
-  "authorization_endpoint_uri": "https://ring.webebook.org/auth/realms/jhipster/protocol/openid-connect/auth",
-  "token_endpoint_uri": "https://ring.webebook.org/auth/realms/jhipster/protocol/openid-connect/token",
-  "registration_endpoint_uri": "https://ring.webebook.org/auth/realms/jhipster/clients-registrations/openid-connect",
+  "authorization_endpoint_uri": "https://mars.webebook.org/auth/realms/mars/protocol/openid-connect/auth",
+  "token_endpoint_uri": "https://mars.webebook.org/auth/realms/mars/protocol/openid-connect/token",
+  "registration_endpoint_uri": "https://mars.webebook.org/auth/realms/mars/clients-registrations/openid-connect",
   "https_required": true
 }
